--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -34,7 +34,9 @@ jobs:
         run: npm ci
       - name: Test code
         run: npm run test
+        id: test
       - name: Upload test report
+        if: failure() && steps.test.outcome == 'failure'
         uses: actions/upload-artifact@v3
         with:
           name: test-report
