--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -6,6 +6,12 @@ jobs:
       matrix:
         node: [12, 14, 16]
         os: [ubuntu-latest, windows-latest]
+        include:
+          - node: 18
+            os: ubuntu-latest
+        exclude:
+          - node: 16
+            os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Get code
